mailchimp script + updated deps

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="facebook-domain-verification" content="wmwo7hanisfcz64jibz3mbnvm85zhe" />
     <title>Harmonics</title>
+    <script id="mcjs">!(function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, 'script', 'https://chimpstatic.com/mcjs-connected/js/users/70b20f90b742c102a6d56ec9c/f1f4108ee2efd2493e23e8c88.js'))
+</script>
   </head>
   <body>
     <div id="app"></div>
