--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="facebook-domain-verification" content="wmwo7hanisfcz64jibz3mbnvm85zhe" />
-    <title>Harmonics.be index</title>
+    <title>Harmonics.be</title>
 
     <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css" />
   </head>
