--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="flex flex-col min-h-screen"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
